Writer: Fix Comment's width when in full view: animation & z-index
Before this commit the line that connects the normal comment would
still be visible when the card switched to full view mode -> result:
the line was connect to nothing. Hide that line.

When in full view mode the card the card is centered, user wants to
see the comment in a more focused way so, better to add an overlay
- It helps to distinguish the comment from the document page
- It helps the user to understand that clicking anywhere in the
document or in the sidebars will close the Full view mode of the
comment
  - While doing this I discovered that the z-index was very low making
  some parts of the sidebars being above the comment overlay (and the
  comment in full view when in super narrow screens).

Extra: Fix replies comments when in this mode, before there were not
centered because they were inheriting margin-left only.

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -593,6 +593,15 @@ body {
 	max-height: 95%;
 	width: 66ch;
 	/* Centered align comment in TS, we cannot align it here with positon relative */
+	z-index: 1000;
+}
+.cool-annotation.annotation-pop-up:not(.annotation-active) > .cool-annotation-content-wrapper {
+	margin-right: 8px;
+}
+.cool-annotation.annotation-pop-up.annotation-active {
+	transition: transform 400ms cubic-bezier(0.2,0,0,1), box-shadow 400ms cubic-bezier(0.2,0,0,1);
+	will-change: transform, box-shadow;
+	box-shadow: 0 0 0 1000px rgba(var(--doc-type),0.15);
 }
 
 .cool-annotation.tracked-deleted-comment-show {
